maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:13: error: not found: value esFaceMur
    else if( esFaceMur()){droite();}
             ^Escaper:20: error: not found: value placement
while(!estSurBiscuit()){placement()}
                        ^